# dream-memory-plugin

./: .gitignore  LICENSE  README.md  RESURRECTION-RESEARCH.md  dream-memory-plugin.md  migrate.py  pyproject.toml
source/: __init__.py  cli.py  consolidation.py  extract.py  extract_llm.py  plugin.yaml  propose.py  recall.py  shared.py  staging.py  store.py  taxonomy.py
source/tests/: conftest.py  test_auto_recall.py  test_candidate_extraction.py  test_consolidation.py  test_consolidation_lock.py  test_cron.py  test_extract_llm.py  test_forgetting_curves.py  test_llm_consolidation.py  test_provider.py  test_recall.py  test_regression.py  test_session_gate.py  test_store.py  test_taxonomy.py  test_wikilinks.py
